--- a/SerilogSetup/appsettings.json
+++ b/SerilogSetup/appsettings.json
@@ -1,3 +1,22 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Logs\\serilog-setup.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
