--- a/SerilogSetup/appsettings.Development.json
+++ b/SerilogSetup/appsettings.Development.json
@@ -5,7 +5,8 @@
       "Default": "Debug",
       "Override": {
         "System": "Information",
-        "Microsoft": "Information"
+        "Microsoft": "Information",
+        "Microsoft.AspNetCore": "Warning"
       }
     },
     "WriteTo": [
