--- a/SerilogSetup/appsettings.json
+++ b/SerilogSetup/appsettings.json
@@ -13,7 +13,8 @@
         "Name": "File",
         "Args": {
           "path": "C:\\Logs\\serilog-setup.txt",
-          "rollingInterval": "Day"
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:HH:mm:ss.fff} {Level:u3}] {SourceContext}: {Message:lj}{NewLine}{Exception}"
         }
       }
     ]
